# python_learning

./: README.md
MinerU/: .python-version  README.md  order.md  pyproject.toml  requirements_old.txt  rye_add.py
Users-go/: README.md  REGISTRATION_DEBUG.md
Users-go/back_end/: .env  Dockerfile  Makefile  README.md  SOLUTION.md  debug_run.bat  diagnose_and_fix.bat  docker-compose.yml  env.example  go.mod  go.sum  init_db.sql  main.go  newworld.db  setup_database.bat  start_enhanced.bat  start_server.bat  start_server.sh  start_simple.bat  test_api.bat  test_api.sh  test_config.go  test_endpoints.bat  troubleshoot.bat
Users-go/back_end/config/: config.go
Users-go/back_end/database/: database.go
Users-go/back_end/handlers/: auth.go  common.go  user.go
Users-go/back_end/middleware/: auth.go  cors.go
Users-go/bug-analysi/: login-bug.md
Users-go/front_react/: README.md  package-lock.json  package.json  test-api.js  test-login.js  test-register-enhanced.js
old_project/my_project/: pyproject.toml
operater/: pip-operate.md  rye-sync.md  uv_operate.md
operater-docs/: changer.md  imager-old-rye.md  rye&uv-compare.md  rye-envirement.md  rye-order-operate.md  rye-pin.md  rye-publish.md  rye-switch.md  rye-sync-requests.md  rye_operate.md  rye_uv_operate.md
rye-myproject/: README.md  example.py  pyproject.toml  test_uv.py  uv_helper.py
rye-myproject/full_stack/: README.md  api_docs.yaml  pyproject.toml
rye-myproject/full_stack/src/full_stack/: __init__.py  auth.py  config.py  crud.py  database.py  init_db.py  main.py  models.py  run.py  schemas.py
(+19 files in other folders)
