[project]
name = "full-stack"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "adaliu888", email = "84856103@qq.com" }
]
dependencies = [
    "requests>=2.32.4",
    "pandas>=2.3.0",
    "fastapi>=0.115.14",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.10.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/full_stack"]
